Обновлен гитигнор и добавлен README